# Real_Estate_forecast

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-and-push.yml  orchestration.yml  pr-checks.yml
artifacts/: model.onnx
configs/: config.yaml
data/: data_source.md
docker/: api.Dockerfile  app.Dockerfile  docker-compose.yml  requirements.txt
docker/grafana/provisioning/dashboards/: dashboard.yml
docker/prometheus/: prometheus.yml
notebooks/: main_nb.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/api/: __init__.py  main.py  routes.py  schemas.py
src/app/: streamlit_app.py
src/app/pages/: s_forecast.py  s_monitoring.py  s_predict.py
src/models/: model_config.py  model_registry.py  retrain.py
src/monitoring/: detect_drift.py  log_report.py  prometheus_metrics.py  reference.py
src/pipeline/: evaluation.py  features.py  ingest_preprocess.py  orchestrator.py  predict.py  training.py
src/utils/: config.py
tests/: conftest.py  test_api.py  test_drift.py  test_features.py  test_model.py  test_orchestrator.py
