[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realestate-forecast"
version = "0.1.0"
description = "Real Estate Forecast API and Dashboard"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "catboost>=1.2.0",
    "onnxruntime>=1.16.0",
    "onnx>=1.15.0",

    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",

    "mlflow>=2.8.0",
    "optuna>=3.4.0",

    "openpyxl>=3.1.0",
    "python-dateutil>=2.8.0",

    "evidently>=0.4.0",
    "scipy>=1.11.0",
    "pyarrow>=14.0.0",

    "pyyaml>=6.0",

    "streamlit>=1.28.0",
    "plotly>=5.17.0",

    "gunicorn>=21.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --strict-markers"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: fast, isolated unit tests",
    "integration: slower tests involving multiple components",
    "e2e: end-to-end tests requiring full stack or real artifacts",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]