[build-system]
requires = ["setuptools==68.2.2", "wheel==0.41.3"]
build-backend = "setuptools.build_meta"

[project]
name = "realestate-forecast"
version = "0.1.0"
description = "Real Estate Forecast API and Dashboard"
readme = "README.md"
requires-python = "==3.11.*"

dependencies = [
    # Data processing
    "pandas==2.1.4",
    "numpy==1.26.4",
    "scipy==1.11.4",
    "pyarrow==14.0.2",

    # ML core
    "scikit-learn==1.3.2",
    "catboost==1.2.2",
    "onnxruntime==1.16.3",
    "onnx==1.15.0",

    # API
    "fastapi==0.111.1",
    "uvicorn[standard]==0.30.1",
    "python-multipart==0.0.9",
    "pydantic==2.7.4",
    "gunicorn==21.2.0",

    # MLOps
    "mlflow==2.9.2",
    "optuna==3.4.0",

    # Data I/O
    "openpyxl==3.1.2",
    "python-dateutil==2.8.2",
    "pyyaml==6.0.1",

    # Monitoring
    "evidently==0.4.22",
    "prometheus-client==0.20.0",
    "prometheus-fastapi-instrumentator==7.0.0",

    # Dashboard
    "streamlit==1.28.2",
    "plotly==5.17.0",

    # mlflow imports pkg_resources at runtime
    "setuptools==69.5.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    "httpx==0.27.0",
    "flake8==6.1.0",
    "black==23.12.1",
    "mypy==1.8.0",
    "isort==5.13.2",
]