[build-system]
requires = ["setuptools==82.0.1", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "realestate-forecast"
version = "0.1.0"
description = "Real Estate Forecast API and Dashboard"
readme = "README.md"
requires-python = "==3.11.*"

dependencies = [
    # Data processing
    "pandas==2.3.3",
    "numpy==2.3.4",
    "scipy==1.16.3",
    "pyarrow==24.0.0",

    # ML core
    "scikit-learn==1.7.2",
    "catboost==1.2.10",
    "onnxruntime==1.26.0",
    "onnx==1.21.0",

    # API
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "python-multipart==0.0.32",
    "pydantic==2.13.4",
    "gunicorn==26.0.0",

    # MLOps
    "mlflow==3.13.0",
    "optuna==4.6.0",

    # Data I/O
    "openpyxl==3.1.5",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",

    # Monitoring
    "evidently==0.7.21",
    "prometheus-client==0.20.0",
    "prometheus-fastapi-instrumentator==7.0.0",

    # Dashboard
    "streamlit==1.58.0",
    "plotly==5.24.1",

    # mlflow imports pkg_resources at runtime
    "setuptools==82.0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
]

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
    "flake8==7.3.0",
    "black==26.5.1",
    "mypy==2.1.0",
    "isort==8.0.1",
]